# AGV

./: .gitignore  LICENSE  README.md  geotag_info.xlsx  new  new.pub
data/geotagged_images/session_20250522_195857/data/: geotag_data.json  geotag_data.xlsx
data/geotagged_images/session_20250522_200538/data/: geotag_data.json  geotag_data.xlsx
data/geotagged_images/session_20250522_201209/data/: geotag_data.json  geotag_data.xlsx
data/geotagged_images/session_20250522_202346/data/: geotag_data.json  geotag_data.xlsx
data/geotagged_images/session_20250522_203515/data/: geotag_data.json  geotag_data.xlsx
data/geotagged_images/session_20250522_203731/data/: geotag_data.json  geotag_data.xlsx
install/: local_setup.sh  setup.sh
install/geotagging/share/geotagging/: package.sh
install/image_capture/share/image_capture/: package.dsv  package.ps1  package.sh  package.xml
install/lidar/share/lidar/: package.sh  package.xml
install/mission_manager/share/mission_manager/: package.dsv  package.ps1  package.sh  package.xml
install/ntrip_client/lib/ntrip_client/: ntrip
install/ntrip_client/share/ntrip_client/: package.dsv  package.ps1  package.sh  package.xml
install/pan_tilt/share/pan_tilt/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/solar_panel_detector/share/solar_panel_detector/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/: .gitignore
src/agv_bringup/: CMakeLists.txt  package.xml
src/agv_bringup/launch/: AGV.launch.xml
src/geotagging/: geotag_info.xlsx  setup.py
src/geotagging/geotagging/: geotag.py
src/geotagging/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/geotagging/install/geotagging/lib/geotagging/: geotag
src/geotagging/install/geotagging/share/geotagging/: package.bash  package.dsv  package.ps1  package.sh  package.xml
src/geotagging/log/: latest_build
src/image_capture/: package.xml  setup.py
src/image_capture/image_capture/: capture.py
src/image_capture/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/image_capture/install/image_capture/lib/image_capture/: capture
src/image_capture/install/image_capture/share/image_capture/: package.sh
src/image_capture/log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/geotagging/share/geotagging/: package.sh  package.zsh
src/install/image_capture/share/image_capture/: package.sh
src/install/lidar/share/lidar/: package.sh  package.xml
src/install/mission_manager/share/mission_manager/: package.sh  package.xml
src/install/ntrip_client/share/ntrip_client/: package.sh
src/install/obstacle_detection_msgs/share/obstacle_detection_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/pan_tilt/share/pan_tilt/: package.sh  package.xml
src/install/solar_panel_detector/lib/solar_panel_detector/: detector
src/install/solar_panel_detector/share/solar_panel_detector/: package.sh  package.xml
src/lidar/: setup.py
src/lidar/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/lidar/install/lidar/share/lidar/: package.sh  package.xml
src/lidar/lidar/: lidar.py
src/lidar/lidar/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/lidar/lidar/log/: latest_build
src/lidar/log/: latest_build
src/lidar/msg/: ObstacleInfo.msg
src/log/: latest_build
src/mission_manager/: package.xml  setup.py
src/mission_manager/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
src/mission_manager/install/mission_manager/lib/mission_manager/: mission_manager
src/mission_manager/install/mission_manager/share/mission_manager/: package.dsv  package.ps1  package.sh  package.xml
src/mission_manager/log/: latest_build
src/mission_manager/mission_manager/: mission_manager.py  mission_service.py
src/mission_manager/mission_manager/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/mission_manager/mission_manager/log/: latest_build
src/ntrip_client/: setup.py
src/ntrip_client/install/: local_setup.sh  setup.sh  setup.zsh
src/ntrip_client/install/ntrip_client/share/ntrip_client/: package.sh
src/ntrip_client/log/: latest_build
src/ntrip_client/ntrip_client/: ntrip.py
src/pan_tilt/: setup.cfg  setup.py
src/pan_tilt/install/: local_setup.sh  setup.ps1  setup.sh
src/pan_tilt/install/pan_tilt/share/pan_tilt/: package.dsv  package.sh
src/pan_tilt/log/: latest_build
src/pan_tilt/pan_tilt/: pan_tilt.py
src/solar_panel_detector/: setup.cfg  setup.py
src/solar_panel_detector/solar_panel_detector/: detector.py
