<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agv_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="s229701698@mandela.ac.za">pride</maintainer>
  <license>TODO: License declaration</license>
  
  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  
  <!-- Other dependencies for your nodes -->
  <exec_depend>solar_panel_detector</exec_depend>
  <exec_depend>ntrip_client</exec_depend>
  <exec_depend>geotagging</exec_depend>
  <exec_depend>image_capture</exec_depend>
  <exec_depend>mission_manager</exec_depend>
  <exec_depend>lidar</exec_depend>
  <exec_depend>pan_tilt</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
