<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>mission_manager</name>
  <version>0.1.0</version>
  <description>Mission manager for autonomous UAV control using MAVROS and ROS2.</description>
  <maintainer email="s229701698@mandela.ac.za">Pride-Alcott</maintainer>
  <author email="s229701698@mandela.ac.za">Pride-Alcott</author>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <build_depend>ament_cmake</build_depend>
  <build_depend>ament_cmake_python</build_depend>
  <build_depend>ament_index_python</build_depend>
  <build_depend>ament_package</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>ros2cli</exec_depend>

  <!-- Export configuration for build system -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
