<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>mission_manager</name>
  <version>0.0.1</version>
  <description>Mission manager for autonomous UAV control using MAVROS and ROS2.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <author email="your_email@example.com">Your Name</author>
  <license>Apache-2.0</license>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>mavros</exec_depend>

  <!-- Export configuration for build system -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
